# termux-gui-rust-demo

./: .gitignore  AGENTS.md  ALL_COMPONENTS_COMPLETE.md  CHANGELOG.md  COMPONENT_COMPARISON.md  COMPONENT_FIX_SUMMARY.md  COMPONENT_STATUS.md  CURRENT_ISSUE.md  CURRENT_PROGRESS_REPORT.md  CURRENT_PROJECT_STATUS.md  CURRENT_STATUS.md  CURRENT_STATUS_2025-10-04.md  CURRENT_STATUS_REPORT.txt  Cargo.toml  DEBUG_BUTTON_ISSUE.md  DOC_IMPROVEMENT_EXAMPLE.md  FIX_SEND_READ_ISSUE.md  HORIZONTAL_SCROLL_ISSUE.md  INTERNATIONALIZATION_STATUS.md  LAYOUT_FIX_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.md  NEXT_ACTION.md  NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PUBLICATION_SUCCESS.md  PUBLISH_GUIDE.md  QUICK_ACTION.md  QUICK_REFERENCE.md  QUICK_STATUS.txt  README.md  README_NEXT_STEPS.md  README_SPINNER.md  REFACTORING_IMPLEMENTATION.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_STATUS.md  RELEASE_NOTES_v0.2.0.md  (+42 more)
examples/: README.md  button_demo.rs  button_demo_fullscreen.rs  button_demo_v2.rs  button_demo_v3_debug.rs  button_demo_v4_trace.rs  button_demo_v5_simple.rs  checkbox_demo.md  checkbox_demo.rs  checkbox_demo_v2.rs  enhanced_features_demo.rs  frame_layout_demo_v2.rs  fullscreen_webview.rs  grid_layout_demo_v2.rs  horizontal_scroll_demo_v2.rs  image_demo_v2.rs  input_demo.rs  input_demo_v2.rs  progress_demo_v2.rs  radio_demo.md  radio_demo.rs  radio_demo_v2.rs  space_demo_v2.rs  spinner_demo.md  spinner_demo.rs  spinner_demo_v2.rs  swipe_refresh_demo_v2.rs  switch_demo.md  switch_demo.rs  switch_demo_v2.rs  tab_layout_demo_v2.rs  test_button_events.rs  test_button_simple.rs  test_events.rs  test_lib_minimal.rs  test_minimal_spinner.rs  test_single_button.rs  test_spinner_cascade.rs  test_spinner_debug.rs  test_spinner_fullscreen.rs  (+5 more)
src/: activity.rs  connection.rs  error.rs  lib.rs  main.rs  view.rs
src/components/: button.rs  checkbox.rs  edit_text.rs  image_view.rs  layout.rs  mod.rs  progress_bar.rs  radio.rs  space.rs  spinner.rs  switch.rs  text_view.rs  toggle_button.rs  web_view.rs
