[package]
name = "termux-gui"
version = "0.2.0"
edition = "2021"
authors = ["Termux GUI Rust Contributors"]
description = "Rust bindings for Termux:GUI - Build Android GUI apps in Rust"
license = "MIT"
keywords = ["termux", "android", "gui", "ui"]
categories = ["api-bindings", "gui"]

[lib]
name = "termux_gui"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
rand = "0.8"
libc = "0.2"
thiserror = "1.0"

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "input_demo"
path = "examples/input_demo.rs"

[[example]]
name = "test_events"
path = "examples/test_events.rs"

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"

[[example]]
name = "switch_demo"
path = "examples/switch_demo.rs"

[[example]]
name = "radio_demo"
path = "examples/radio_demo.rs"

[[example]]
name = "spinner_demo"
path = "examples/spinner_demo.rs"

[[example]]
name = "test_minimal_spinner"
path = "examples/test_minimal_spinner.rs"

[[example]]
name = "test_spinner_simple"
path = "examples/test_spinner_simple.rs"

[[example]]
name = "test_spinner_debug"
path = "examples/test_spinner_debug.rs"

[[example]]
name = "test_spinner_fullscreen"
path = "examples/test_spinner_fullscreen.rs"
