[package]
name = "termux-gui"
version = "0.2.0"
edition = "2021"
authors = ["Termux GUI Rust Contributors"]
description = "Rust bindings for Termux:GUI - Build Android GUI apps in Rust"
license = "MIT"
keywords = ["termux", "android", "gui", "ui"]
categories = ["api-bindings", "gui"]

[lib]
name = "termux_gui"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
rand = "0.8"
libc = "0.2"
thiserror = "1.0"

# === 旧版示例 (使用原始 API，待迁移) ===

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"

[[example]]
name = "input_demo"
path = "examples/input_demo.rs"

[[example]]
name = "switch_demo"
path = "examples/switch_demo.rs"

[[example]]
name = "radio_demo"
path = "examples/radio_demo.rs"

[[example]]
name = "spinner_demo"
path = "examples/spinner_demo.rs"

[[example]]
name = "test_events"
path = "examples/test_events.rs"

# === 新版示例 (使用新库 API) ===

[[example]]
name = "button_demo_v2"
path = "examples/button_demo_v2.rs"

[[example]]
name = "checkbox_demo_v2"
path = "examples/checkbox_demo_v2.rs"
