[package]
name = "termux-gui"
version = "0.2.0"
edition = "2021"
authors = ["Termux GUI Rust Contributors"]
description = "Rust bindings for Termux:GUI - Build Android GUI apps in Rust"
license = "MIT"
repository = "https://github.com/yourusername/termux-gui-rust-demo"
documentation = "https://docs.rs/termux-gui"
readme = "README.md"
keywords = ["termux", "android", "gui", "ui"]
categories = ["api-bindings", "gui"]

[lib]
name = "termux_gui"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
rand = "0.8"
libc = "0.2"
thiserror = "1.0"
base64 = "0.21"

# === 旧版示例 (使用原始 API，待迁移) ===

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"

[[example]]
name = "input_demo"
path = "examples/input_demo.rs"

[[example]]
name = "switch_demo"
path = "examples/switch_demo.rs"

[[example]]
name = "radio_demo"
path = "examples/radio_demo.rs"

[[example]]
name = "spinner_demo"
path = "examples/spinner_demo.rs"

[[example]]
name = "test_events"
path = "examples/test_events.rs"

# === 新版示例 (使用新库 API) ===

[[example]]
name = "button_demo_v2"
path = "examples/button_demo_v2.rs"

[[example]]
name = "checkbox_demo_v2"
path = "examples/checkbox_demo_v2.rs"

[[example]]
name = "input_demo_v2"
path = "examples/input_demo_v2.rs"

[[example]]
name = "switch_demo_v2"
path = "examples/switch_demo_v2.rs"

[[example]]
name = "radio_demo_v2"
path = "examples/radio_demo_v2.rs"

[[example]]
name = "spinner_demo_v2"
path = "examples/spinner_demo_v2.rs"

[[example]]
name = "image_demo_v2"
path = "examples/image_demo_v2.rs"

[[example]]
name = "progress_demo_v2"
path = "examples/progress_demo_v2.rs"

[[example]]
name = "toggle_demo_v2"
path = "examples/toggle_demo_v2.rs"

[[example]]
name = "space_demo_v2"
path = "examples/space_demo_v2.rs"

[[example]]
name = "frame_layout_demo_v2"
path = "examples/frame_layout_demo_v2.rs"

[[example]]
name = "grid_layout_demo_v2"
path = "examples/grid_layout_demo_v2.rs"

[[example]]
name = "horizontal_scroll_demo_v2"
path = "examples/horizontal_scroll_demo_v2.rs"

[[example]]
name = "swipe_refresh_demo_v2"
path = "examples/swipe_refresh_demo_v2.rs"

[[example]]
name = "tab_layout_demo_v2"
path = "examples/tab_layout_demo_v2.rs"

[[example]]
name = "webview_demo_v2"
path = "examples/webview_demo_v2.rs"

[[example]]
name = "low_level_protocol_demo"
path = "examples/low_level_protocol_demo.rs"

[[example]]
name = "enhanced_features_demo"
path = "examples/enhanced_features_demo.rs"

[[example]]
name = "fullscreen_webview"
path = "examples/fullscreen_webview.rs"

[[example]]
name = "webview_config_demo"
path = "examples/webview_config_demo.rs"

[[example]]
name = "webview_simple"
path = "examples/webview_simple.rs"

